--- a/www/index.html
+++ b/www/index.html
@@ -22,28 +22,30 @@
             <a href="#" class="a-brand">
                 <img src="./img/brand-icon.svg" alt="">
             </a>
-            <div class="a-burger d-none" data-target="#primaryNav" aria-controls="primaryNav" aria-label="Toggle mobile navigation">
-                <div></div>
-                <div></div>
-                <div></div>
+            <button class="a-hamburger hamburger hamburger--spin" type="button" data-target="#primaryNav" aria-controls="primaryNav" aria-label="Toggle mobile navigation">
+                <span class="hamburger-box">
+                  <span class="hamburger-inner"></span>
+                </span>
+            </button>
+            <div class="o-header__colapse">
+                <nav class="m-primary-nav" id="primaryNav">
+                    <ul class="m-primary-nav__list">
+                        <li class="m-primary-nav__item">
+                            <a href="#" class="m-primary-nav__link">Služby</a>
+                        </li>
+                        <li class="m-primary-nav__item">
+                            <a href="#" class="m-primary-nav__link">Kariéra</a>
+                        </li>
+                        <li class="m-primary-nav__item">
+                            <a href="#" class="m-primary-nav__link">O nás</a>
+                        </li>
+                        <li class="m-primary-nav__item">
+                            <a href="#" class="m-primary-nav__link">Kontakt</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a href="#" class="a-action-link">cs</a>
             </div>
-            <nav class="m-primary-nav" id="primaryNav">
-                <ul class="m-primary-nav__list">
-                    <li class="m-primary-nav__item">
-                        <a href="#" class="m-primary-nav__link">Služby</a>
-                    </li>
-                    <li class="m-primary-nav__item">
-                        <a href="#" class="m-primary-nav__link">Kariéra</a>
-                    </li>
-                    <li class="m-primary-nav__item">
-                        <a href="#" class="m-primary-nav__link">O nás</a>
-                    </li>
-                    <li class="m-primary-nav__item">
-                        <a href="#" class="m-primary-nav__link">Kontakt</a>
-                    </li>
-                </ul>
-            </nav>
-            <a href="#" class="a-action-link">cs</a>
         </header>
 
         <section class="o-hello">
