--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
             </a>
             <button class="a-hamburger hamburger hamburger--spin" type="button" data-target="#primaryNav" aria-controls="primaryNav" aria-label="Toggle mobile navigation">
                 <span class="hamburger-box">
-                  <span class="hamburger-inner"></span>
+                  <span class="hamburger-inner a-hamburger__inner"></span>
                 </span>
             </button>
             <div class="o-header__colapse">
@@ -32,6 +32,20 @@
                     <ul class="m-primary-nav__list">
                         <li class="m-primary-nav__item">
                             <a href="#" class="m-primary-nav__link">Služby</a>
+                            <ul class="m-submenu m-primary-nav__submenu">
+                                <li class="m-submenu__item">
+                                    <a href="#" class="m-submenu__link">Nástrojárna</a>
+                                </li>
+                                <li class="m-submenu__item">
+                                    <a href="#" class="m-submenu__link">Lékařské přístroje</a>
+                                </li>
+                                <li class="m-submenu__item">
+                                    <a href="#" class="m-submenu__link">Energie a služby</a>
+                                </li>
+                                <li class="m-submenu__item">
+                                    <a href="#" class="m-submenu__link">Slévárna hliníku</a>
+                                </li>
+                            </ul>
                         </li>
                         <li class="m-primary-nav__item">
                             <a href="#" class="m-primary-nav__link">Kariéra</a>
