feat: dropdown in header

--- a/www/index.html
+++ b/www/index.html
@@ -30,20 +30,20 @@
             <div class="o-header__colapse" id="primaryNav">
                 <nav class="m-primary-nav">
                     <ul class="m-primary-nav__list">
-                        <li class="m-primary-nav__item">
-                            <a href="#" class="m-primary-nav__link js--has-submenu" aria-controls="submenu" aria-label="Toggle submenu">Služby</a>
-                            <ul class="m-submenu m-primary-nav__submenu js--submenu" id="submenu">
-                                <li class="m-submenu__item">
-                                    <a href="#" class="m-submenu__link">Nástrojárna</a>
+                        <li class="m-primary-nav__item a-dropdown dropdown">
+                            <a href="#" class="m-primary-nav__link a-dropdown__btn dropdown-toggle js--has-submenu" id="dropdownMenuButton" data-target="#submenu" data-bs-auto-close="outside" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-controls="submenu" aria-label="Toggle submenu">Služby</a>
+                            <ul class="m-submenu m-primary-nav__submenu a-dropdown__menu dropdown-menu js--submenu" id="submenu" aria-labelledby="dropdownMenuButton">
+                                <li class="m-submenu__item a-dropdown__menu">
+                                    <a href="#" class="m-submenu__link a-dropdown__link">Nástrojárna</a>
                                 </li>
-                                <li class="m-submenu__item">
-                                    <a href="#" class="m-submenu__link">Lékařské přístroje</a>
+                                <li class="m-submenu__item a-dropdown__menu">
+                                    <a href="#" class="m-submenu__link a-dropdown__link">Lékařské přístroje</a>
                                 </li>
-                                <li class="m-submenu__item">
-                                    <a href="#" class="m-submenu__link">Energie a služby</a>
+                                <li class="m-submenu__item a-dropdown__menu">
+                                    <a href="#" class="m-submenu__link a-dropdown__link">Energie a služby</a>
                                 </li>
-                                <li class="m-submenu__item">
-                                    <a href="#" class="m-submenu__link">Slévárna hliníku</a>
+                                <li class="m-submenu__item a-dropdown__menu">
+                                    <a href="#" class="m-submenu__link a-dropdown__link">Slévárna hliníku</a>
                                 </li>
                             </ul>
                         </li>
