feat: product box

--- a/www/index.html
+++ b/www/index.html
@@ -101,85 +101,102 @@
             <div class="o-list__row g-0">
                 <div class="o-list__col">
                     <div class="m-product-box">
-                        <div class="m-product-box__icon">
-                            <img src="./img/icon-energetika.png" srcset="./img/icon-energetika@2x.png 2x" alt="">
-                        </div>
                         <div class="m-product-box__body">
-                            <h2 class="a-title m-product-box__title">Strojírenství</h2>
-                            <div class="m-product-box__perex">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit…</p>
+                            <div class="m-product-box__icon">
+                                <img src="./img/icon-zdravotnictví.png" srcset="./img/icon-zdravotnictví@2x.png 2x" alt="">
+                            </div>
+                            <div class="m-product-box__about">
+                                <h2 class="a-title m-product-box__title">Strojírenství</h2>
+                                <div class="m-product-box__perex">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit…</p>
+                                </div>
+                            </div>
+                            <div class="m-product-box__actions">
+                                <a href="#" class="a-more-link">
+                                   <span>Show more</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="41" height="29" viewBox="0 0 41 29" style="enable-background:new 0 0 41 29" xml:space="preserve">
+                                        <path d="M40.8 14.5 27 28.3l-.7-.7L38.8 15H.2v-1h38.6L26.3 1.4l.7-.7 13.8 13.8z" fill="white"/>
+                                    </svg>
+                                </a>
                             </div>
                         </div>
-                        <div class="m-product-box__actions">
-                            <a href="#" class="a-more-link">
-                               <span>Show more</span>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="41" height="29" viewBox="0 0 41 29" style="enable-background:new 0 0 41 29" xml:space="preserve">
-                                    <path d="M40.8 14.5 27 28.3l-.7-.7L38.8 15H.2v-1h38.6L26.3 1.4l.7-.7 13.8 13.8z" fill="white"/>
-                                </svg>
-                            </a>
+                        <div class="m-product-box__figure">
+                            <img src="./img/hero-img-001.png" srcset="./img/hero-img-001@2x.png 2x" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="o-list__col">
                     <div class="m-product-box">
-                        <div class="m-product-box__icon">
-                            <img src="./img/icon-energetika.png" srcset="./img/icon-energetika@2x.png 2x" alt="">
-                        </div>
                         <div class="m-product-box__body">
-                            <h2 class="a-title m-product-box__title">Zdravotnictví</h2>
-                            <div class="m-product-box__perex">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit…</p>
+                            <div class="m-product-box__icon">
+                                <img src="./img/icon-zdravotnictví.png" srcset="./img/icon-zdravotnictví@2x.png 2x" alt="">
+                            </div>
+                            <div class="m-product-box__about">
+                                <h2 class="a-title m-product-box__title">Zdravotnictví</h2>
+                                <div class="m-product-box__perex">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit…</p>
+                                </div>
+                            </div>
+                            <div class="m-product-box__actions">
+                                <a href="#" class="a-more-link">
+                                   <span>Show more</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="41" height="29" viewBox="0 0 41 29" style="enable-background:new 0 0 41 29" xml:space="preserve">
+                                        <path d="M40.8 14.5 27 28.3l-.7-.7L38.8 15H.2v-1h38.6L26.3 1.4l.7-.7 13.8 13.8z" fill="white"/>
+                                    </svg>
+                                </a>
                             </div>
                         </div>
-                        <div class="m-product-box__actions">
-                            <a href="#" class="a-more-link">
-                               <span>Show more</span>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="41" height="29" viewBox="0 0 41 29" style="enable-background:new 0 0 41 29" xml:space="preserve">
-                                    <path d="M40.8 14.5 27 28.3l-.7-.7L38.8 15H.2v-1h38.6L26.3 1.4l.7-.7 13.8 13.8z" fill="white"/>
-                                </svg>
-                            </a>
+                        <div class="m-product-box__figure">
+                            <img src="./img/hero-img-001.png" srcset="./img/hero-img-001@2x.png 2x" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="o-list__col">
                     <div class="m-product-box">
-                        <div class="m-product-box__icon">
-                            <img src="./img/icon-energetika.png" srcset="./img/icon-energetika@2x.png 2x" alt="">
-                        </div>
                         <div class="m-product-box__body">
-                            <h2 class="a-title m-product-box__title">Energetika</h2>
-                            <div class="m-product-box__perex">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit…</p>
+                            <div class="m-product-box__icon">
+                                <img src="./img/icon-energetika.png" srcset="./img/icon-energetika@2x.png 2x" alt="">
                             </div>
-                        </div>
-                        <div class="m-product-box__actions">
-                            <a href="#" class="a-more-link">
-                               <span>Show more</span>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="41" height="29" viewBox="0 0 41 29" style="enable-background:new 0 0 41 29" xml:space="preserve">
-                                    <path d="M40.8 14.5 27 28.3l-.7-.7L38.8 15H.2v-1h38.6L26.3 1.4l.7-.7 13.8 13.8z" fill="white"/>
-                                </svg>
-                            </a>
+                            <div class="m-product-box__about">
+                                <h2 class="a-title m-product-box__title">Energetika</h2>
+                                <div class="m-product-box__perex">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit…</p>
+                                </div>
+                            </div>
+                            <div class="m-product-box__actions">
+                                <a href="#" class="a-more-link">
+                                   <span>Show more</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="41" height="29" viewBox="0 0 41 29" style="enable-background:new 0 0 41 29" xml:space="preserve">
+                                        <path d="M40.8 14.5 27 28.3l-.7-.7L38.8 15H.2v-1h38.6L26.3 1.4l.7-.7 13.8 13.8z" fill="white"/>
+                                    </svg>
+                                </a>
+                            </div>
+                         </div>
+                        <div class="m-product-box__figure">
+                            <img src="./img/hero-img-001.png" srcset="./img/hero-img-001@2x.png 2x" alt="">
                         </div>
                     </div>
                 </div>
                 <div class="o-list__col">
                     <div class="m-product-box">
-                        <div class="m-product-box__icon">
-                            <img src="./img/icon-energetika.png" srcset="./img/icon-energetika@2x.png 2x" alt="">
-                        </div>
                         <div class="m-product-box__body">
-                            <h2 class="a-title m-product-box__title">Výroba a služby</h2>
-                            <div class="m-product-box__perex">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit…</p>
+                            <div class="m-product-box__icon">
+                                <img src="./img/icon-výroba.png" srcset="./img/icon-výroba@2x.png 2x" alt="">
                             </div>
-                        </div>
-                        <div class="m-product-box__actions">
-                            <a href="#" class="a-more-link">
-                               <span>Show more</span>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="41" height="29" viewBox="0 0 41 29" style="enable-background:new 0 0 41 29" xml:space="preserve">
-                                    <path d="M40.8 14.5 27 28.3l-.7-.7L38.8 15H.2v-1h38.6L26.3 1.4l.7-.7 13.8 13.8z" fill="white"/>
-                                </svg>
-                            </a>
+                            <div class="m-product-box__about">
+                                <h2 class="a-title m-product-box__title">Výroba <br> a služby</h2>
+                                <div class="m-product-box__perex">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit…</p>
+                                </div>
+                            </div>
+                            <div class="m-product-box__actions">
+                                <a href="#" class="a-more-link">
+                                   <span>Show more</span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="41" height="29" viewBox="0 0 41 29" style="enable-background:new 0 0 41 29" xml:space="preserve">
+                                        <path d="M40.8 14.5 27 28.3l-.7-.7L38.8 15H.2v-1h38.6L26.3 1.4l.7-.7 13.8 13.8z" fill="white"/>
+                                    </svg>
+                                </a>
+                            </div>
                         </div>
                         <div class="m-product-box__figure">
                             <img src="./img/hero-img-001.png" srcset="./img/hero-img-001@2x.png 2x" alt="">
