--- a/www/index.html
+++ b/www/index.html
@@ -206,6 +206,30 @@
             </div>
         </section>
 
+        <section class="o-section o-section--light">
+            <div class="a-container a-container--lg">
+                <h2 class="a-title o-section__title text-center">o naší <span>společnosti</span></h2>
+                    <div class="a-perex a-perex--column">
+                        <p>Hlavním podnikatelským záměrem je výroba a distribuce energií (voda, teplo, plyn, elektřina). Další část společnosti se zabývá vývojem a vstřikování plastových výlisků (pro technické účely, elektrotechniku a zdravotnictví), konstrukcí, výrobou forem (vstřikování plastů, vyfukování, lití hliníku,..atd.), nástrojů, jednoúčelových strojů a zařízení. V roce 2018 jsme zahájili výrobu dřevěných pelet EN Plus třídy A1 s kapacitou 100 t za měsíc.</p>
+                        <p>Naše společnost chce být dobrým a spolehlivým partnerem pro všechny naše zákazníky, proto jsme vybudovali a stále zdokonalujeme náš systém kvality, který jsme úspěšně uvedli do praxe v roce 2003. V současné době je naše společnost držitelem certifikace dle norem ISO 9001 (nástrojárna, lisovna) a ISO 13485 (lisovna plastů a montáž zdravotnického prostředku).</p>
+                    </div>
+                <div class="o-section__actions">
+                    <a href="#" class="a-btn a-btn--secondary">
+                        Více o nás
+                        <svg xmlns="http://www.w3.org/2000/svg" width="41" height="29" viewBox="0 0 41 29" style="enable-background:new 0 0 41 29" xml:space="preserve">
+                            <path d="M40.8 14.5 27 28.3l-.7-.7L38.8 15H.2v-1h38.6L26.3 1.4l.7-.7 13.8 13.8z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                    <a href="#" class="a-btn a-btn--outline-primary">
+                        Karíéra
+                        <svg xmlns="http://www.w3.org/2000/svg" width="41" height="29" viewBox="0 0 41 29" style="enable-background:new 0 0 41 29" xml:space="preserve">
+                            <path d="M40.8 14.5 27 28.3l-.7-.7L38.8 15H.2v-1h38.6L26.3 1.4l.7-.7 13.8 13.8z" fill="currentColor"/>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </section>
+
 
         <section class="o-hero">
             <div class="container container--xl">
@@ -214,7 +238,7 @@
                         <div class="col-md-7">
                             <h1 class="a-title o-hero__title">Naše <span>služby</span></h1>
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 d-flex align-items-center">
                             <div class="a-perex">
                                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse sagittis ultrices augue. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat eu, orci. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Fusce dui leo, imperdiet in.</p>
                             </div>
@@ -229,6 +253,47 @@
             </div>
         </section>
 
+        <div class="m-adress-box">
+            <div class="m-adress-box__header">
+                <h3 class="m-adress-box__name">Sídlo společnosti</h3>
+            </div>
+            <h4 class="m-adress-box__title">ONIVON a. s.</h4>
+            <address>
+                <ul class="a-list">
+                    <li>
+                        Akademika Bedrny 88/6
+                    </li>
+                    <li>
+                        500 03 Hradec Králové
+                    </li>
+                </ul>
+            </address>
+            <ul class="a-list">
+                <li>
+                    <a href="tel:+420469655813">
+                        Tel.: +420 469 655 813
+                    </a>
+                </li>
+                <li>
+                    <a href="fax:+420469655811">
+                        Tel.: +420 469 655 813
+                    </a>
+                </li>
+            </ul>
+            <ul class="a-list">
+                <li>
+                    <a href="mailto:info@onivon.cz">
+                        info@onivon.cz
+                    </a>
+                </li>
+                <li>
+                    <a href="mailto:sale@onivon.cz">
+                        sale@onivon.cz
+                    </a>
+                </li>
+            </ul>
+        </div>
+
         <section class="o-hero o-hero--dark">
             <div class="container container--xl">
                 <div class="o-hero__body">
@@ -237,7 +302,7 @@
                             <h1 class="a-title o-hero__title">Energie <span>a služby</span></h1>
                             <img class="a-icon" src="./img/icon-energetika.png" srcset="./img/icon-energetika@2x.png" alt="">
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5 d-flex align-items-center">
                             <div class="a-perex">
                                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse sagittis ultrices augue. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat eu, orci. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Fusce dui leo, imperdiet in.</p>
                             </div>
