feat: footer + adress boxes

--- a/www/index.html
+++ b/www/index.html
@@ -257,44 +257,92 @@
             <div class="m-adress-box__header">
                 <h3 class="m-adress-box__name">Sídlo společnosti</h3>
             </div>
-            <h4 class="m-adress-box__title">ONIVON a. s.</h4>
-            <address>
+            <div class="m-adress-box__body">
+                <h4 class="m-adress-box__title">ONIVON a. s.</h4>
+                <address>
+                    <ul class="a-list">
+                        <li>
+                            Akademika Bedrny 88/6
+                        </li>
+                        <li>
+                            500 03 Hradec Králové
+                        </li>
+                    </ul>
+                </address>
                 <ul class="a-list">
                     <li>
-                        Akademika Bedrny 88/6
+                        <a href="tel:+420469655813">
+                            Tel.: +420 469 655 813
+                        </a>
                     </li>
                     <li>
-                        500 03 Hradec Králové
+                        <a href="fax:+420469655811">
+                            Tel.: +420 469 655 813
+                        </a>
                     </li>
                 </ul>
-            </address>
-            <ul class="a-list">
-                <li>
-                    <a href="tel:+420469655813">
-                        Tel.: +420 469 655 813
-                    </a>
-                </li>
-                <li>
-                    <a href="fax:+420469655811">
-                        Tel.: +420 469 655 813
-                    </a>
-                </li>
-            </ul>
-            <ul class="a-list">
-                <li>
-                    <a href="mailto:info@onivon.cz">
-                        info@onivon.cz
-                    </a>
-                </li>
-                <li>
-                    <a href="mailto:sale@onivon.cz">
-                        sale@onivon.cz
-                    </a>
-                </li>
-            </ul>
+                <ul class="a-list">
+                    <li>
+                        <a href="mailto:info@onivon.cz">
+                            info@onivon.cz
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:sale@onivon.cz">
+                            sale@onivon.cz
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
-        <section class="o-hero o-hero--dark">
+        <div class="m-adress-box m-adress-box--dotted mt-5">
+            <div class="m-adress-box__dots">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="m-adress-box__header">
+                <h3 class="m-adress-box__name">Fakturační údaje</h3>
+            </div>
+            <div class="m-adress-box__body">
+                <h4 class="m-adress-box__title">ONIVON a. s.</h4>
+                <address>
+                    <ul class="a-list">
+                        <li>
+                            Akademika Bedrny 88/6
+                        </li>
+                        <li>
+                            500 03 Hradec Králové
+                        </li>
+                    </ul>
+                </address>
+                <ul class="a-list">
+                    <li>
+                        IČO: 25942182
+                    </li>
+                    <li>
+                        DIČ: CZ 25942182
+                    </li>
+                </ul>
+                <ul class="a-list">
+                    <li>
+                        Zápis v OR: Krajský soud v Hradci Králové,
+                    </li>
+                    <li>
+                        oddíl B/2110
+                    </li>
+                    <li>
+                        Základní kapitál: 241 150 000 Kč
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- <section class="o-hero o-hero--dark">
             <div class="container container--xl">
                 <div class="o-hero__body">
                     <div class="row">
@@ -310,7 +358,85 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
+
+        <footer class="o-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-3">
+                        <div class="o-footer__col o-footer__col--nav">
+                            <span class="d-block mt-4"><strong>Sitemap</strong></span>
+                            <ul class="a-list a-list--row o-footer__list">
+                                <li class="d-block">
+                                    <a href="#">Our services</a>
+                                </li>
+                                <li>
+                                    <a href="#">About us</a>
+                                </li>
+                            </ul>
+                            <ul class="a-list a-list--row o-footer__list">
+                                <li>
+                                    <a href="#">Career</a>
+                                </li>
+                                <li>
+                                    <a href="#">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-6">
+                        <div class="o-footer__col">
+                            <address>
+                                <ul class="a-list o-footer__list">
+                                    <li class="mb-3"><strong>Adress</strong></li>
+                                    <li>ONIVON a. s</li>
+                                    <li>Akademika Bedrny 88/6</li>
+                                    <li>500 03 Hradec Králové</li>
+                                </ul>
+                            </address>
+                            <ul class="a-list o-footer__list">
+                                <li class="mb-3"><strong>Contact</strong></li>
+                                <li>
+                                    <a href="tel:+420495404311">
+                                        Tel.: +420 495 404 311
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="tel:+420495404312">
+                                        Tel.: +420 495 404 312
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="a-list o-footer__list">
+                                <li class="mt-5"><strong></strong></li>
+                                <li>
+                                    <a href="mailto:info@onivon.cz">
+                                        info@onivon.cz
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="mailto:sale@onivon.cz">
+                                        sale@onivon.cz
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-xl-3">
+                        <div class="o-footer__col o-footer__col--end">
+                            <ul class="a-list o-footer__list">
+                                <li class="mb-3">
+                                    Made by <a href="#">WDF</a>
+                                </li>
+                                <li>
+                                    Copyright © 2022 ONIVON a.s.
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
         <script src="js/bundle.esm.js" type="module"></script>
     </body>
