--- a/www/index.html
+++ b/www/index.html
@@ -236,7 +236,8 @@
                 <div class="o-hero__body">
                     <div class="row">
                         <div class="col-md-7">
-                            <h1 class="a-title o-hero__title">Naše <span>služby</span></h1>
+                            <h1 class="a-title o-hero__title">Energie <span>a služby</span></h1>
+                            <img class="a-icon" src="./img/icon-energetika.png" srcseet="./img/icon-energetika@2x.png 2x" alt="icon energetika">
                         </div>
                         <div class="col-md-5 d-flex align-items-center">
                             <div class="a-perex">
@@ -253,51 +254,209 @@
             </div>
         </section>
 
-        <div class="m-adress-box">
-            <div class="m-adress-box__header">
-                <h3 class="m-adress-box__name">Sídlo společnosti</h3>
+        <section class="o-hero">
+            <div class="container container--xl">
+                <div class="o-hero__body">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="a-title o-hero__title">O naší <span>společnosti</span></h1>
+                        </div>
+                        <div class="col-xl-10 d-flex justify-content-end">
+                            <div class="a-perex a-perex--md">
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse sagittis ultrices augue. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat eu, orci. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Fusce dui leo, imperdiet in.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="m-adress-box__body">
-                <h4 class="m-adress-box__title">ONIVON a. s.</h4>
-                <address>
-                    <ul class="a-list">
-                        <li>
-                            Akademika Bedrny 88/6
-                        </li>
-                        <li>
-                            500 03 Hradec Králové
-                        </li>
-                    </ul>
-                </address>
-                <ul class="a-list">
-                    <li>
-                        <a href="tel:+420469655813">
-                            Tel.: +420 469 655 813
-                        </a>
-                    </li>
-                    <li>
-                        <a href="fax:+420469655811">
-                            Tel.: +420 469 655 813
-                        </a>
-                    </li>
-                </ul>
-                <ul class="a-list">
-                    <li>
-                        <a href="mailto:info@onivon.cz">
-                            info@onivon.cz
-                        </a>
-                    </li>
-                    <li>
-                        <a href="mailto:sale@onivon.cz">
-                            sale@onivon.cz
-                        </a>
-                    </li>
-                </ul>
+            <div class="o-hero__gradient">
+                <div class="o-hero__figure">
+                    <img src="./img/hero-img-002.jpg" srcset="./img/hero-img-002@2x.jpg 2x" alt="hero-img">
+                </div>
             </div>
-        </div>
+        </section>
 
-        <div class="m-adress-box m-adress-box--dotted mt-5">
-            <div class="m-adress-box__dots">
+        <section class="o-hero o-hero--dark">
+            <div class="container container--xl">
+                <div class="o-hero__body">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h1 class="a-title o-hero__title">Přidejte se <span>k nám</span></h1>
+                            <img class="d-block a-icon" src="./img/icon-join.png" srcset="./img/icon-join@2x.png" alt="">
+                        </div>
+                        <div class="col-md-6 d-flex align-items-center">
+                            <div class="a-perex a-perex--md">
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse sagittis ultrices augue. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat eu, orci. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Fusce dui leo, imperdiet in.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="o-hero__gradient">
+                <div class="o-hero__figure">
+                    <img src="./img/hero-img-003.png" srcset="./img/hero-img-003@2x.png 2x" alt="hero-img">
+                </div>
+            </div>
+        </section>
+
+        <section class="o-section">
+            <div class="a-container">
+                <h2 class="a-title o-section__title">Kontakty</h2>
+                <div class="row mt-5">
+                    <div class="col-lg-5">
+                        <div class="m-box">
+                            <div class="m-box__header">
+                                <h3 class="m-box__name">Sídlo společnosti</h3>
+                            </div>
+                            <div class="m-box__body">
+                                <h4 class="m-box__title">ONIVON a. s.</h4>
+                                <address>
+                                    <ul class="a-list">
+                                        <li>
+                                            Akademika Bedrny 88/6
+                                        </li>
+                                        <li>
+                                            500 03 Hradec Králové
+                                        </li>
+                                    </ul>
+                                </address>
+                                <ul class="a-list">
+                                    <li>
+                                        <a href="tel:+420469655813">
+                                            Tel.: +420 469 655 813
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="fax:+420469655811">
+                                            Tel.: +420 469 655 811
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul class="a-list">
+                                    <li>
+                                        <a href="mailto:info@onivon.cz">
+                                            info@onivon.cz
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="mailto:sale@onivon.cz">
+                                            sale@onivon.cz
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-7">
+                        <h3 class="a-title o-section__name">Provozovny</h3>
+                        <div class="m-list">
+                            <h3 class="a-title m-list__title">chrudim</h3>
+                            <div class="m-list__body">
+                                <address>
+                                    <ul class="a-list">
+                                        <li>Průmyslová 90</li>
+                                        <li>Chrudim IV</li>
+                                        <li>798 27</li>
+                                    </ul>
+                                </address>
+                                <ul class="a-list a-list--dark">
+                                    <li>
+                                        <a href="tel:+420469655813">
+                                            Tel.: +420 469 655 813
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="fax:+420469655811">
+                                            Tel.: +420 469 655 811
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul class="a-list">
+                                    <li><strong>Warehouse open time:</strong></li>
+                                    <li>Mo – Fri   6:00 – 14:30</li>
+                                    <li>
+                                        <a href="fax:+42069655813">
+                                            Tel.: +420 696 55 813
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="m-list">
+                            <h3 class="a-title m-list__title">Hradec Králové</h3>
+                            <div class="m-list__body">
+                                <address>
+                                    <ul class="a-list">
+                                        <li>Akademika Bedrny 88/6</li>
+                                        <li>Hradec Králové</li>
+                                        <li>798 27</li>
+                                    </ul>
+                                </address>
+                                <ul class="a-list a-list--dark">
+                                    <li>
+                                        <a href="tel:+420469404813">
+                                            Tel.: +420 469 404 311
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="fax:+420469404811">
+                                            Tel.: +420 469 404 312
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul class="a-list">
+                                    <li><strong>Warehouse open time:</strong></li>
+                                    <li>Mo – Fri   6:00 – 15:30</li>
+                                    <li>
+                                        <a href="fax:+420495404311">
+                                            Tel.: +420 495 404 311
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="m-list">
+                            <h3 class="a-title m-list__title">Němčice nad Hanou</h3>
+                            <div class="m-list__body">
+                                <address>
+                                    <ul class="a-list">
+                                        <li>Masarykova 640</li>
+                                        <li>Němčice nad Hanou</li>
+                                        <li>798 27</li>
+                                    </ul>
+                                </address>
+                                <ul class="a-list a-list--dark">
+                                    <li>
+                                        <a href="tel:+420469404813">
+                                            Tel.: +420 469 404 311
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="fax:+420469404811">
+                                            Tel.: +420 469 404 312
+                                        </a>
+                                    </li>
+                                </ul>
+                                <ul class="a-list">
+                                    <li><strong>Warehouse open time:</strong></li>
+                                    <li>Mo – Fri   6:00 – 15:30</li>
+                                    <li>
+                                        <a href="fax:+420495404311">
+                                            Tel.: +420 495 404 311
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+        <div class="m-box m-box--dotted mt-5">
+            <div class="m-box__dots">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -305,11 +464,11 @@
                 <span></span>
                 <span></span>
             </div>
-            <div class="m-adress-box__header">
-                <h3 class="m-adress-box__name">Fakturační údaje</h3>
+            <div class="m-box__header">
+                <h3 class="m-box__name">Fakturační údaje</h3>
             </div>
-            <div class="m-adress-box__body">
-                <h4 class="m-adress-box__title">ONIVON a. s.</h4>
+            <div class="m-box__body">
+                <h4 class="m-box__title">ONIVON a. s.</h4>
                 <address>
                     <ul class="a-list">
                         <li>
