feat: service detail

--- a/www/index.html
+++ b/www/index.html
@@ -234,29 +234,6 @@
             <div class="container container--xl">
                 <div class="o-hero__body">
                     <div class="row">
-                        <div class="col-md-7">
-                            <h1 class="a-title o-hero__title">Energie <span>a služby</span></h1>
-                            <img class="a-icon" src="./img/icon-energetika.png" srcseet="./img/icon-energetika@2x.png 2x" alt="icon energetika">
-                        </div>
-                        <div class="col-md-5 d-flex align-items-center">
-                            <div class="a-perex">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse sagittis ultrices augue. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat eu, orci. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Fusce dui leo, imperdiet in.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="o-hero__gradient">
-                <div class="o-hero__figure">
-                    <img src="./img/Energie.jpg" srcset="./img/Energie@2x.jpg 2x" alt="">
-                </div>
-            </div>
-        </section>
-
-        <section class="o-hero">
-            <div class="container container--xl">
-                <div class="o-hero__body">
-                    <div class="row">
                         <div class="col-12">
                             <h1 class="a-title o-hero__title">O naší <span>společnosti</span></h1>
                         </div>
@@ -497,6 +474,28 @@
                 </ul>
             </div>
         </div>
+
+        <section class="o-section">
+            <div class="a-container">
+                <ul class="a-list a-list--dash">
+                    <li><span> výroba vstřikovacích forem na termoplasty, včetně forem na lisy babyplast</span></li>
+                    <li><span> výroba kokil na lití hliníkových slitin a zinku</span></li>
+                    <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
+                    <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
+                    <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
+                    <li><span> výroba velmi přesných a tvarově složitých dílců (vložky forem, razníky, střižné matrice, protlačovací matrice, součásti automatických linek, díly přípravků)</span></li>
+                </ul>
+
+                <ul class="a-list a-list--check">
+                    <li><span>výroba vstřikovacích forem na termoplasty, včetně forem na lisy babyplast</span></li>
+                    <li><span> výroba kokil na lití hliníkových slitin a zinku</span></li>
+                    <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
+                    <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
+                    <li><span>výroba tažných, střižných, ohýbacích a postupových nástrojů</span> </li>
+                    <li><span> výroba velmi přesných a tvarově složitých dílců (vložky forem, razníky, střižné matrice, protlačovací matrice, součásti automatických linek, díly přípravků)</span></li>
+                </ul>
+            </div>
+        </section>
 
         <footer class="o-footer">
             <div class="container">
