--- a/www/index.html
+++ b/www/index.html
@@ -11,9 +11,9 @@
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/bundle.css">
-        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Syncopate:wght@400;700&display=swap" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
 
         <meta name="theme-color" content="#fafafa">
     </head>
@@ -245,10 +245,8 @@
                     </div>
                 </div>
             </div>
-            <div class="o-hero__gradient">
-                <div class="o-hero__figure">
-                    <img src="./img/hero-img-002.jpg" srcset="./img/hero-img-002@2x.jpg 2x" alt="hero-img">
-                </div>
+            <div class="o-hero__figure">
+                <img src="./img/hero-img-002.jpg" srcset="./img/hero-img-002@2x.jpg 2x" alt="hero-img">
             </div>
         </section>
 
@@ -268,10 +266,8 @@
                     </div>
                 </div>
             </div>
-            <div class="o-hero__gradient">
-                <div class="o-hero__figure">
-                    <img src="./img/hero-img-003.png" srcset="./img/hero-img-003@2x.png 2x" alt="hero-img">
-                </div>
+            <div class="o-hero__figure">
+                <img src="./img/hero-img-003.png" srcset="./img/hero-img-003@2x.png 2x" alt="hero-img">
             </div>
         </section>
 
